Added chatbot with new FAQs

--- a/projects/ai-avatar.html
+++ b/projects/ai-avatar.html
@@ -832,9 +832,9 @@
         
         <div class="footer-contact">
           <h3>Contact Me</h3>
-          <p><i class="fas fa-envelope"></i> <a href="mailto:contact@muatasim.com">contact@muatasim.com</a></p>
-          <p><i class="fas fa-phone"></i> <a href="tel:+1234567890">+123 456 7890</a></p>
-          <p><i class="fas fa-map-marker-alt"></i> New York, USA</p>
+          <p><i class="fas fa-envelope"></i> <a href="mailto:contact@muatasim.com">Meharmahalcoll@gmail.com</p>
+          <p><i class="fas fa-phone"></i> <a href="tel:+1234567890">0308 8754565</a></p>
+          <p><i class="fas fa-map-marker-alt"></i> Pakistan KpK Peshawar</p>
           
           <div class="footer-social">
             <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
