Added photos fiver and upwork section and one blog post

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="image-wrapper">
             <div class="image-blob"></div>
             <div class="glass-frame">
-              <img src="https://i.pinimg.com/736x/83/8e/05/838e05d228f7bd25e945f99cb6632df4.jpg" alt="Muatasim Billah">
+              <img src="images\ChatGPT Image Apr 14, 2025, 02_25_56 PM.png" alt="Muatasim Billah">
             </div>
           </div>
         </div>
@@ -146,7 +146,7 @@
       <div class="about-content">
         <div class="about-image">
           <div class="image-frame">
-            <img src="https://scontent.fisb4-2.fna.fbcdn.net/v/t39.30808-6/479918713_647874191247454_4829321967974759426_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeF3nbr-KVn18PN3A3YrQ8t-ZTOLy8EekPVlM4vLwR6Q9dNUyyY-30SZ8xNtcS88buvmP-nbyiu9xJ8BMU9BELc7&_nc_ohc=cNDB7qCVU88Q7kNvgG0FgqI&_nc_oc=AdnZu1WpfpwLX8KjA3MTugD07mrCsfZfKM7IWlOT1zSwdxBA2jqAeC9e8Hf33DEq7ZhAl-h6KN9Ug9Uo574dAtL8&_nc_zt=23&_nc_ht=scontent.fisb4-2.fna&_nc_gid=R7AjJySfvZy5chpP4ffHbQ&oh=00_AYEe3C0JPe3zxLUTEoelfUsfqN76gpjEpwX3ZYdMBGfWxw&oe=67EC799A" alt="About Muatasim">
+            <img src="images\ChatGPT Image Apr 14, 2025, 02_15_46 PM.png" alt="About Muatasim">
           </div>
         </div>
         <div class="about-text">
@@ -222,7 +222,44 @@
       </div>
     </div>
   </section>
+<!-- ===== Freelance Profiles Section ===== -->
+<section id="freelance-profiles" class="section">
+  <div class="container">
+    <div class="section-header">
+      <h2 class="section-title">Hire Me On</h2>
+      <p class="section-subtitle">Available for freelance work on these platforms</p>
+      <div class="section-underline"></div>
+    </div>
 
+    <div class="platforms-grid">
+      <!-- Fiverr Profile Card -->
+      <div class="platform-card glass">
+        <div class="platform-icon fiverr-icon">
+          <span class="fiverr-logo">Fi</span>
+        </div>
+        <h3>Fiverr Profile</h3>
+        <p>Check out my gigs and services on Fiverr with 100% satisfaction rate</p>
+        <a href="https://www.fiverr.com/mehar_ai_studio?public_mode=true" class="platform-btn fiverr-btn" target="_blank">
+          Visit My Fiverr
+          <i class="fas fa-arrow-right"></i>
+        </a>
+      </div>
+
+      <!-- Upwork Profile Card -->
+      <div class="platform-card glass">
+        <div class="platform-icon upwork-icon">
+          <span class="upwork-logo">Up</span>
+        </div>
+        <h3>Upwork Profile</h3>
+        <p>View my professional profile and hire me for long-term projects</p>
+        <a href="https://www.upwork.com/freelancers/~01d27ff9dd0dbefaaf?viewMode=1" class="platform-btn upwork-btn" target="_blank">
+          Visit My Upwork
+          <i class="fas fa-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
   <!-- Skills Section -->
   <section id="skills" class="section skills-section section-reveal">
     <div class="container">
