--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="search.css">
+  <script src="search.js"></script>
 </head>
 <body>
   <!-- Custom Cursor (Desktop Only) -->
@@ -45,7 +47,7 @@
       <button class="mobile-menu-btn" aria-label="Toggle menu">
         <i class="fas fa-bars"></i>
       </button>
-      
+     
       <div class="nav-links desktop-nav">
         <a href="#home" class="nav-link">Home</a>
         <a href="#about" class="nav-link">About</a>
