addd voice feature to thr portfolio chtbot'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   gtag('config', 'G-1502JK6E7V'); // Aapka Measurement ID
 </script>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   
