added new blog post about How to start coding with zero knwldwge

--- a/index.html
+++ b/index.html
@@ -635,7 +635,30 @@
       </div>
     </div>
   </section>
-
+<!-- Latest Blog Posts Section -->
+<section id="latest-blogs" class="section blog-section section-reveal">
+  <div class="container">
+    <div class="section-header">
+      <h2 class="section-title">Latest <span class="primary-text">Blogs</span></h2>
+      <p class="section-subtitle">Insights and Knowledge</p>
+      <div class="section-underline"></div>
+    </div>
+    
+    <div class="blog-home-grid">
+      <!-- Blog previews will be loaded here dynamically -->
+      <div class="loading-blogs">
+        <div class="loading-spinner"></div>
+        <p>Loading latest blogs...</p>
+      </div>
+    </div>
+    
+    <div class="view-all-posts">
+      <a href="blog/index.html" class="view-all-btn">
+        View All Posts <i class="fas fa-arrow-right"></i>
+      </a>
+    </div>
+  </div>
+</section>
   <!-- Testimonials Section -->
   <section id="testimonials" class="section testimonials-section section-reveal">
     <div class="container">
