--- a/index.html
+++ b/index.html
@@ -1006,5 +1006,6 @@
   <!-- JavaScript -->
   <script src="js\chatbot.js"></script>
   <script src="js/main.js"></script>
+  <script src="favicon.js"></script>
 </body>
 </html>
