added basic audio enhancement tool

--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,36 @@
       </div>
   </div>
 </section>
+<!-- Audio Enhancement Tool Section -->
+<section id="audio-tool" class="tool-section">
+<div class="container">
+ <div class="tool-content">
+   <div class="tool-text">
+     <h2>Audio Enhancement Tool</h2>
+     <p>Professional audio processing in your browser. Reduce noise, enhance clarity, and improve your audio quality with our advanced web-based tools.</p>
+     <ul class="tool-features">
+       <li><i class="fas fa-volume-off"></i> Noise Reduction</li>
+       <li><i class="fas fa-sliders-h"></i> Equalizer Controls</li>
+       <li><i class="fas fa-compress-arrows-alt"></i> Volume Normalization</li>
+       <li><i class="fas fa-microphone"></i> Voice Enhancement</li>
+     </ul>
+     <a href="audio-tool.html" class="tool-btn">Use Tool Now</a>
+   </div>
+   <div class="tool-image">
+     <div class="waveform-animation">
+       <span></span>
+       <span></span>
+       <span></span>
+       <span></span>
+       <span></span>
+       <span></span>
+       <span></span>
+       <span></span>
+     </div>
+   </div>
+ </div>
+</div>
+</section>
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
@@ -1100,7 +1130,6 @@
         </div>
       </div>
      
-   
 <!-- Font Awesome Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   
