added new tools to help people

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         <a href="#about" class="nav-link">About</a>
         <a href="#skills" class="nav-link">Skills</a>
         <a href="#projects" class="nav-link">Projects</a>
-        <a href="#services" class="nav-link">Services</a>
         <a href="blog/index.html" class="nav-link">Blog</a>
         <a href="tools\index.html" class="nav-link">Tools</a>
         <a href="#testimonials" class="nav-link">Testimonials</a>
@@ -1087,14 +1086,14 @@
       </div>
       
       <!-- CV Creator Tool -->
-<div class="tool-card glass">
-  <div class="tool-icon">
-    <i class="fas fa-file-alt"></i>
-  </div>
-  <h3>Professional CV Creator</h3>
-  <p>Create a stunning professional CV in minutes. Choose from multiple templates, customize colors and fonts, then download as a PDF.</p>
-  <a href="tools\cv-creator.html" class="btn-tool">Use Tool</a>
-</div>
+      <div class="tool-card glass">
+        <div class="tool-icon">
+          <i class="fas fa-qrcode"></i>
+        </div>
+        <h3>QR Code Generator</h3>
+        <p>Create customized QR codes for websites, contact info, Wi-Fi networks, and more. Download as PNG or SVG.</p>
+        <a href="tools\qr-generator.html" class="btn-tool">Use Tool</a>
+      </div>
     </div>
     
     <div class="tools-cta">
