--- a/tools/index.html
+++ b/tools/index.html
@@ -135,24 +135,24 @@
     <p>Create customized QR codes for websites, contact info, Wi-Fi networks, and more. Download as PNG or SVG.</p>
     <a href="qr-generator.html" class="btn-tool">Use Tool</a>
   </div>
-  <!-- CV Creator Tool -->
+  <!-- JPG to PDF Converter Tool -->
 <div class="tool-card glass">
-    <div class="tool-icon">
-      <i class="fas fa-file-alt"></i>
-    </div>
-    <h3>Professional CV Creator</h3>
-    <p>Create a stunning professional CV in minutes. Choose from multiple templates, customize colors and fonts, then download as a PDF.</p>
-    <a href="cv-creator.html" class="btn-tool">Use Tool</a>
+  <div class="tool-icon">
+    <i class="fas fa-file-pdf"></i>
   </div>
-  <!-- Business Card Creator Tool -->
+  <h3>JPG to PDF Converter</h3>
+  <p>Convert your JPG/JPEG images to PDF files. Customize page settings, reorder images, and download instantly.</p>
+  <a href="tools/jpg-to-pdf.html" class="btn-tool">Use Tool</a>
+</div>
+<!-- PDF to JPG Converter Tool -->
 <div class="tool-card glass">
-    <div class="tool-icon">
-      <i class="fas fa-id-card"></i>
-    </div>
-    <h3>Business Card Creator</h3>
-    <p>Create professional digital business cards with custom designs, QR codes, and multiple templates. Download as PDF or image.</p>
-    <a href="business-card.html" class="btn-tool">Use Tool</a>
+  <div class="tool-icon">
+    <i class="fas fa-images"></i>
   </div>
+  <h3>PDF to JPG Converter</h3>
+  <p>Convert PDF documents to high-quality JPG images. Extract pages, customize quality, and download as individual images or ZIP archive.</p>
+  <a href="tools/pdf-to-jpg.html" class="btn-tool">Use Tool</a>
+</div>
         <!-- Add more tools here as you create them -->
         
       </div>
