updated privacy policy for tools

--- a/tools/pdf-to-jpg.html
+++ b/tools/pdf-to-jpg.html
@@ -68,11 +68,7 @@
     <div class="container">
       <nav>
         <a href="../index.html" class="back-link"><i class="fas fa-arrow-left"></i> Back to Tools</a>
-        <div class="theme-toggle">
-          <i class="fas fa-moon"></i>
-          <i class="fas fa-sun"></i>
-          <div class="toggle-ball"></div>
-        </div>
+        
       </nav>
       <h1>Free PDF to JPG Converter Online</h1>
       <p class="tool-description">Convert your PDF documents to high-quality JPG or PNG images with our free online tool. Extract specific pages, customize image quality, and download as individual files or ZIP archive. No registration required, 100% secure.</p>
@@ -420,7 +416,12 @@
           </div>
         </div>
       </footer>
-    
+      <div class="footer-bottom">
+        <p>&copy; 2025 Mehar Designer Tools. All rights reserved.</p>
+        <div class="footer-links">
+          <a href="privacy.html">Privacy Policy</a>
+          <a href="term.html">Terms of Use</a>
+        </div>
   </footer>
 
   <!-- Notification Element -->
