added two tools image compressor and image studio

--- a/tools/index.html
+++ b/tools/index.html
@@ -151,6 +151,24 @@
   <p>Convert PDF documents to high-quality JPG images. Extract pages, customize quality, and download as individual images or ZIP archive.</p>
   <a href="pdf-to-jpg.html" class="btn-tool">Use Tool</a>
 </div>
+<!-- Image Effects Studio Tool Card -->
+<div class="tool-card glass">
+  <div class="tool-icon">
+    <i class="fas fa-image"></i>
+  </div>
+  <h3>Image Effects Studio</h3>
+  <p>Apply professional filters and effects to your images with real-time preview. Adjust brightness, contrast, colors, and more without uploading to any server.</p>
+  <a href="image-effects.html" class="btn-tool">Use Tool</a>
+</div>
+<!-- Image Compressor Tool Card -->
+<div class="tool-card glass">
+  <div class="tool-icon">
+    <i class="fas fa-compress-alt"></i>
+  </div>
+  <h3>Image Compressor</h3>
+  <p>Reduce image file size by up to 80% while maintaining quality. Perfect for websites, emails, and social media. No server uploads - complete privacy.</p>
+  <a href="image-compressor.html" class="btn-tool">Use Tool</a>
+</div>
         <!-- Add more tools here as you create them -->
         
       </div>
