--- a/tools/audio-cutter.html
+++ b/tools/audio-cutter.html
@@ -371,7 +371,7 @@
     </div>
   </footer>
   <div class="footer-bottom">
-    <p>&copy; 2025 Mehar Designer Tools. All rights reserved.</p>
+    <p>&copy; 2025 Muatasim billah Tools. All rights reserved.</p>
     <div class="footer-links">
       <a href="privacy.html">Privacy Policy</a>
       <a href="term.html">Terms of Use</a>
