--- a/tools/qr-generator.html
+++ b/tools/qr-generator.html
@@ -16,7 +16,7 @@
   <meta property="og:url" content="https://mehardesigner.online/tools/qr-generator.html">
   <meta property="og:image" content="https://mehardesigner.online/images/qr-generator-og.jpg">
   <meta property="og:image:alt" content="QR Code Generator Tool Preview">
-  <meta property="og:site_name" content="Mehar Designer Tools">
+  <meta property="og:site_name" content="Muatasim billah Tools">
   
   <!-- Enhanced Twitter Card Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -30,7 +30,7 @@
   <link rel="canonical" href="https://mehardesigner.online/tools/qr-generator.html">
   
   <!-- Additional SEO Meta Tags -->
-  <meta name="author" content="Mehar Designer">
+  <meta name="author" content="Muatasim billah">
   <meta name="robots" content="index, follow">
   <meta name="googlebot" content="index, follow">
   <meta name="theme-color" content="#7000ff">
@@ -77,7 +77,7 @@
     "keywords": "qr code, qr generator, free qr code maker, custom qr codes, qr code for business, qr code online",
     "creator": {
       "@type": "Person",
-      "name": "Mehar Designer"
+      "name": "Muatasim billah"
     },
     "browserRequirements": "Requires JavaScript. Compatible with Chrome, Firefox, Safari, and Edge.",
     "availableOnDevice": "Mobile, Tablet, Desktop"
@@ -143,11 +143,11 @@
     "image": "https://mehardesigner.online/images/qr-code-usage-guide.jpg",
     "author": {
       "@type": "Person",
-      "name": "Mehar Designer"
+      "name": "Muatasim billah"
     },
     "publisher": {
       "@type": "Organization",
-      "name": "Mehar Designer",
+      "name": "Muatasim billah",
       "logo": {
         "@type": "ImageObject",
         "url": "https://mehardesigner.online/images/logo.png"
@@ -613,7 +613,7 @@ Address: 123 Main St, New York, NY 10001</div>
         <div class="footer-section">
           <h3 id="footer-title">About This Tool</h3>
           <p>Our free QR code generator helps you create customized QR codes for any purpose. Built with performance and ease-of-use in mind, it offers essential features without requiring any registration or payment.</p>
-          <p>Part of the Mehar Designer toolkit for creatives and professionals.</p>
+          <p>Part of the Muatasim billah toolkit for creatives and professionals.</p>
         </div>
         
         <div class="footer-section">
@@ -639,7 +639,7 @@ Address: 123 Main St, New York, NY 10001</div>
       </div>
       
       <div class="footer-bottom">
-        <p>&copy; 2025 Mehar Designer Tools. All rights reserved.</p>
+        <p>&copy; 2025 Muatasim billah Tools. All rights reserved.</p>
         <div class="footer-links">
           <a href="privacy.html">Privacy Policy</a>
           <a href="term.html">Terms of Use</a>
