added new tools slowed reverb song maker to the tools shop

--- a/tools/color-palette.html
+++ b/tools/color-palette.html
@@ -16,7 +16,7 @@
   <meta property="og:url" content="https://mehardesigner.online/tools/color-palette.html">
   <meta property="og:image" content="https://mehardesigner.online/images/color-palette-og.jpg">
   <meta property="og:image:alt" content="Color Palette Generator Tool Preview">
-  <meta property="og:site_name" content="Mehar Designer Tools">
+  <meta property="og:site_name" content="Muatasim billah Tools">
   
   <!-- Enhanced Twitter Card Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
   <link rel="canonical" href="https://mehardesigner.online/tools/color-palette.html">
   
   <!-- Additional SEO Meta Tags -->
-  <meta name="author" content="Mehar Designer">
+  <meta name="author" content="Muatasim billah">
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
   <meta name="revisit-after" content="7 days">
@@ -86,11 +86,11 @@
     "image": "https://mehardesigner.online/images/color-theory-guide.jpg",
     "author": {
       "@type": "Person",
-      "name": "Mehar Designer"
+      "name": "Muatasim billah"
     },
     "publisher": {
       "@type": "Organization",
-      "name": "Mehar Designer Tools",
+      "name": "Muatasim billah Tools",
       "logo": {
         "@type": "ImageObject",
         "url": "https://mehardesigner.online/images/logo.png"
@@ -542,7 +542,7 @@
           </ul>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 Mehar Designer Tools. All rights reserved.</p>
+          <p>&copy; 2025 Muatasim billah Tools. All rights reserved.</p>
           <div class="footer-links">
             <a href="privacy.html">Privacy Policy</a>
             <a href="term.html">Terms of Use</a>
