--- a/tools/image-compressor.html
+++ b/tools/image-compressor.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Primary Meta Tags -->
-  <title>Free Image Compressor Tool | Reduce Image Size Without Losing Quality | Mehar Designer Tools</title>
+  <title>Free Image Compressor Tool | Reduce Image Size Without Losing Quality | Muatasim billah Tools</title>
   <meta name="title" content="Free Image Compressor Tool | Reduce Image Size Without Losing Quality">
   <meta name="description" content="Compress JPEG, PNG, WebP and GIF images online. Reduce file size by up to 80% while preserving quality. Free, fast, and private - no file uploads to server. Best image compression tool for website optimization.">
   <meta name="keywords" content="image compressor, image compression tool, reduce image size, compress JPEG, compress PNG, compress WebP, compress GIF, website optimization, image optimization, reduce file size, online image compressor, free image compressor, privacy-focused compressor, batch image compression, website speed optimization">
-  <meta name="author" content="Mehar Designer Tools">
+  <meta name="author" content="Muatasim billah Tools">
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
   <meta name="revisit-after" content="1 days">
@@ -25,7 +25,7 @@
   <meta property="og:image" content="https://mehardesigner.online/img/image-compressor-preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="og:site_name" content="Mehar Designer Tools">
+  <meta property="og:site_name" content="Muatasim billah Tools">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -85,7 +85,7 @@
       },
       "author": {
         "@type": "Organization",
-        "name": "Mehar Designer Tools",
+        "name": "Muatasim billah Tools",
         "url": "https://mehardesigner.online"
       }
     }
@@ -513,7 +513,7 @@
       <div class="footer-content">
         <div class="footer-logo">
           <i class="fas fa-compress-alt"></i>
-          <span>Mehar Designer Tools</span>
+          <span>Muatasim billah Tools</span>
         </div>
         <div class="footer-links">
           <a href="index.html">Home</a>
@@ -524,7 +524,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 Mehar Designer Tools. All rights reserved.</p>
+        <p>&copy; 2025 Muatasim billah Tools. All rights reserved.</p>
       </div>
     </div>
   </footer>
