--- a/tools/index.html
+++ b/tools/index.html
@@ -87,7 +87,7 @@
   <!-- Page Header -->
   <section class="page-header">
     <div class="container">
-      <h1>Free <span class="primary-text">Tools</span></h1>
+      <h1>Free <span class="primary-text">Tools Shop</span></h1>
       <p>A collection of useful online tools to enhance your productivity</p>
     </div>
   </section>
@@ -168,6 +168,15 @@
   <h3>Image Compressor</h3>
   <p>Reduce image file size by up to 80% while maintaining quality. Perfect for websites, emails, and social media. No server uploads - complete privacy.</p>
   <a href="image-compressor.html" class="btn-tool">Use Tool</a>
+</div>
+<!-- Slow & Reverb Tool Card -->
+<div class="tool-card glass">
+  <div class="tool-icon">
+    <i class="fas fa-music"></i>
+  </div>
+  <h3>Slow & Reverb</h3>
+  <p>Transform any song with slow tempo effects and dreamy reverb. Create chill vibes with your favorite tracks. No uploads to server - 100% private processing.</p>
+  <a href="slow-reverb.html" class="btn-tool">Use Tool</a>
 </div>
         <!-- Add more tools here as you create them -->
         
