--- a/tools/voice-recorder.html
+++ b/tools/voice-recorder.html
@@ -16,7 +16,7 @@
   <meta property="og:url" content="https://mehardesigner.online/tools/voice-recorder.html">
   <meta property="og:image" content="https://mehardesigner.online/images/voice-recorder-og.jpg">
   <meta property="og:image:alt" content="Voice Recorder with Waveform Visualization">
-  <meta property="og:site_name" content="Mehar Designer Tools">
+  <meta property="og:site_name" content="Muatasim billah Tools">
   
   <!-- Enhanced Twitter Card Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
   <link rel="canonical" href="https://mehardesigner.online/tools/voice-recorder.html">
   
   <!-- Additional SEO Meta Tags -->
-  <meta name="author" content="Mehar Designer">
+  <meta name="author" content="Muatasim billah">
   <meta name="robots" content="index, follow, max-image-preview:large">
   <meta name="language" content="English">
   <meta name="revisit-after" content="7 days">
@@ -95,11 +95,11 @@
     "image": "https://mehardesigner.online/images/voice-recording-guide.jpg",
     "author": {
       "@type": "Person",
-      "name": "Mehar Designer"
+      "name": "Muatasim billah"
     },
     "publisher": {
       "@type": "Organization",
-      "name": "Mehar Designer Tools",
+      "name": "Muatasim billah Tools",
       "logo": {
         "@type": "ImageObject",
         "url": "https://mehardesigner.online/images/logo.png"
@@ -434,12 +434,12 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>Mehar Designer Tools</h3>
+          <h3>Muatasim billah Tools</h3>
           <p>Free, browser-based tools for designers, developers, and content creators. No signups, no downloads, just useful tools.</p>
         </div>
         
         <div class="footer-section">
-          <h3>Audio Tools</h3>
+          <h3>blogs</h3>
           <ul>
             <li><a href="voice-recorder.html">tips for voice recording</a></li>
             <li><a href="audio-cutter.html">How to Enhance any Audio </Audio></a></li>
@@ -459,7 +459,7 @@
       </div>
       
       <div class="footer-bottom">
-        <p>&copy; 2025 Mehar Designer Tools. All rights reserved.</p>
+        <p>&copy; 2025 Muatasim billah Tools. All rights reserved.</p>
         <div class="footer-links">
           <a href="privacy.html">Privacy Policy</a>
           <a href="term.html">Terms of Use</a>
