--- a/tools/jpg-to-pdf.html
+++ b/tools/jpg-to-pdf.html
@@ -402,7 +402,7 @@
           </ul>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 Mehar Designer Tools. All rights reserved.</p>
+          <p>&copy; 2025 Muatasim billah Tools. All rights reserved.</p>
           <div class="footer-links">
             <a href="privacy.html">Privacy Policy</a>
             <a href="term.html">Terms of Use</a>
