--- a/tools/term.html
+++ b/tools/term.html
@@ -644,7 +644,7 @@
           <h2>12. Contact Information</h2>
         </div>
         <p>If you have any questions about these Terms, please contact us at:</p>
-        <p><strong>Email:</strong> support@mehardesigner.online</p>
+        <p><strong>Email:</strong> Meharmahalcoll@gmail.com</p>
         <div class="cta-section">
           <a href="index.html" class="btn-primary"><i class="fas fa-arrow-left"></i> Return to Tools</a>
         </div>
