added new tool pdf to word converter

--- a/tools/index.html
+++ b/tools/index.html
@@ -178,6 +178,15 @@
   <p>Transform any song with slow tempo effects and dreamy reverb. Create chill vibes with your favorite tracks. No uploads to server - 100% private processing.</p>
   <a href="slow-reverb.html" class="btn-tool">Use Tool</a>
 </div>
+<!-- PDF to Word Tool Card -->
+<div class="tool-card glass">
+  <div class="tool-icon">
+    <i class="fas fa-file-word"></i>
+  </div>
+  <h3>PDF to Word Converter</h3>
+  <p>Convert PDF documents to editable Word files online. Extract text with formatting intact. No uploads to server - 100% private and secure processing.</p>
+  <a href="pdf-to-word.html" class="btn-tool">Use Tool</a>
+</div>
         <!-- Add more tools here as you create them -->
         
       </div>
