Added Video To mp3 converter tool

--- a/tools/audio-cutter.html
+++ b/tools/audio-cutter.html
@@ -8,7 +8,13 @@
   <title>Free Online Audio Cutter | Cut MP3, WAV, OGG Files Instantly</title>
   <meta name="description" content="Cut and trim audio files online for free. No registration, no downloads required. Edit MP3, WAV, OGG, M4A with precision and download instantly. 100% secure browser-based tool.">
   <meta name="keywords" content="audio cutter, online audio trimmer, cut mp3, trim audio, free audio editor, mp3 cutter, wav trimmer, audio editing, audio cropper, browser audio tool">
-  
+  <!-- PWA Support -->
+<link rel="manifest" href="manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="MB Tools">
+<link rel="apple-touch-icon" href="icons/icon-152x152.png">
+<meta name="theme-color" content="#7000ff">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://mehardesigner.online/tools/audio-cutter.html">
   
