--- a/tools/pdf-to-jpg.html
+++ b/tools/pdf-to-jpg.html
@@ -24,7 +24,13 @@
   <meta name="twitter:title" content="Free PDF to JPG Converter | Convert PDF to Images Online">
   <meta name="twitter:description" content="Convert PDF to JPG/PNG images online with our free tool. Choose pages, set quality, and download as ZIP or individual files. No registration or installation needed.">
   <meta name="twitter:image" content="https://mehardesigner.online/images/pdf-to-jpg-og.jpg">
-  
+  <!-- PWA Support -->
+<link rel="manifest" href="manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="MB Tools">
+<link rel="apple-touch-icon" href="icons/icon-152x152.png">
+<meta name="theme-color" content="#7000ff">
   <!-- Structured Data Markup for Rich Results -->
   <script type="application/ld+json">
   {
