--- a/tools/privacy.html
+++ b/tools/privacy.html
@@ -609,12 +609,12 @@
           <h2>Contact Us</h2>
         </div>
         <p>If you have any questions about this Privacy Policy or our practices, please contact us at:</p>
-        <p><strong>Email:</strong> support@mehardesigner.online</p>
+        <p><strong>Email:</strong> meharmahalcoll@gmail.com</p>
         <div class="cta-section">
         </div>
       </section>
 
-      <p class="last-updated">Last updated: May 1, 2023</p>
+      <p class="last-updated">Last updated: March 1, 2025</p>
     </div>
   </main>
 
