Added google analytics

--- a/tools/color-palette.html
+++ b/tools/color-palette.html
@@ -40,7 +40,14 @@
   <meta name="apple-mobile-web-app-title" content="Color Palette Generator">
   <meta name="application-name" content="Color Palette Generator">
   <meta name="theme-color" content="#7000FF">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Enhanced Structured Data Markup for Rich Results -->
   <script type="application/ld+json">
   {
