--- a/tools/image-effects.html
+++ b/tools/image-effects.html
@@ -8,7 +8,14 @@
   <title>Advanced Image Effects Studio | Professional Photo Editor | Mehar Designer Tools</title>
   <meta name="description" content="Transform your images with our free online Image Effects Studio. Apply professional filters, adjustments, and effects with real-time preview. No uploads to server - complete privacy guaranteed.">
   <meta name="keywords" content="image editor, photo filters, image effects, online photo editor, privacy-focused editor, photo editing tools, free image editor, browser photo editor">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Open Graph / Social Media Meta Tags -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mehardesigner.online/image-effects.html">
