--- a/tools/pdf-to-jpg.html
+++ b/tools/pdf-to-jpg.html
@@ -11,7 +11,14 @@
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://mehardesigner.online/tools/pdf-to-jpg.html">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="Free PDF to JPG Converter | Convert PDF to Images Online">
   <meta property="og:description" content="Convert PDF to JPG/PNG images online with our free tool. Choose pages, set quality, and download as ZIP or individual files. No registration or installation needed.">
