--- a/tools/privacy.html
+++ b/tools/privacy.html
@@ -8,7 +8,14 @@
   <title>Privacy Policy | Mehar Designer Tools</title>
   <meta name="description" content="Our privacy policy explains how Mehar Designer Tools handles your data. We prioritize user privacy with client-side processing and no data collection.">
   <meta name="keywords" content="privacy policy, data privacy, no data collection, client-side tools, browser-based tools, GDPR compliant">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Privacy Policy | Mehar Designer Tools">
   <meta property="og:description" content="Learn how Mehar Designer Tools prioritizes your privacy with client-side processing and zero data collection.">
