--- a/tools/voice-recorder.html
+++ b/tools/voice-recorder.html
@@ -44,7 +44,14 @@
   <meta name="apple-mobile-web-app-title" content="Voice Recorder">
   <meta name="application-name" content="Voice Recorder">
   <meta name="theme-color" content="#7000FF">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Preconnect to External Resources -->
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
