--- a/pricing.html
+++ b/pricing.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="css\style.css">
   <link rel="stylesheet" href="pricing.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
 </head>
 <body>
   <!-- Your navbar will be here -->
