--- a/projects/web-development.html
+++ b/projects/web-development.html
@@ -5,7 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontend Web Development | Muatasim Billah Portfolio</title>
   <meta name="description" content="Custom frontend web development services with interactive UI/UX and GSAP animations by Muatasim Billah">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   
