--- a/tools/audio-cutter.html
+++ b/tools/audio-cutter.html
@@ -8,7 +8,14 @@
   <title>Free Online Audio Cutter | Cut MP3, WAV, OGG Files Instantly</title>
   <meta name="description" content="Cut and trim audio files online for free. No registration, no downloads required. Edit MP3, WAV, OGG, M4A with precision and download instantly. 100% secure browser-based tool.">
   <meta name="keywords" content="audio cutter, online audio trimmer, cut mp3, trim audio, free audio editor, mp3 cutter, wav trimmer, audio editing, audio cropper, browser audio tool">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Canonical URL -->
   <link rel="canonical" href="https://mehardesigner.online/tools/audio-cutter.html">
   
