--- a/tools/jpg-to-pdf.html
+++ b/tools/jpg-to-pdf.html
@@ -11,7 +11,14 @@
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://mehardesigner.online/tools/jpg-to-pdf.html">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="Free JPG to PDF Converter Online | No Registration Required">
   <meta property="og:description" content="Convert JPG/JPEG images to PDF instantly. Reorder images, customize PDF settings, and download for free. Works directly in your browser with no file upload to servers.">
