--- a/tools/pdf-to-word.html
+++ b/tools/pdf-to-word.html
@@ -33,7 +33,14 @@
   <meta property="twitter:title" content="PDF to Word Converter Online | Convert PDF to DOCX Free | No Email Required">
   <meta property="twitter:description" content="Transform PDF files to editable Word documents in seconds. Preserve formatting while extracting text for easy editing. 100% free with no restrictions.">
   <meta property="twitter:image" content="https://mehardesigner.online/img/pdf-to-word-preview.jpg">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   
