--- a/tools/qr-generator.html
+++ b/tools/qr-generator.html
@@ -37,7 +37,14 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="format-detection" content="telephone=no">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
