--- a/tools/term.html
+++ b/tools/term.html
@@ -21,7 +21,14 @@
   
   <!-- Robots Meta -->
   <meta name="robots" content="index, follow">
-  
+   <!-- Google Analytics (non-critical, can load after CSS) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1502JK6E7V"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-1502JK6E7V');
+   </script>
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   
