--- a/tools/pdf-to-jpg.html
+++ b/tools/pdf-to-jpg.html
@@ -19,6 +19,17 @@
      gtag('js', new Date());
      gtag('config', 'G-1502JK6E7V');
    </script>
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-NMLWBD38');</script>
+  <!-- End Google Tag Manager -->
+   <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NMLWBD38"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="Free PDF to JPG Converter | Convert PDF to Images Online">
   <meta property="og:description" content="Convert PDF to JPG/PNG images online with our free tool. Choose pages, set quality, and download as ZIP or individual files. No registration or installation needed.">
