--- a/tools/privacy.html
+++ b/tools/privacy.html
@@ -16,6 +16,17 @@
      gtag('js', new Date());
      gtag('config', 'G-1502JK6E7V');
    </script>
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-NMLWBD38');</script>
+  <!-- End Google Tag Manager -->
+   <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NMLWBD38"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Privacy Policy | Mehar Designer Tools">
   <meta property="og:description" content="Learn how Mehar Designer Tools prioritizes your privacy with client-side processing and zero data collection.">
