added updated favicon code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <title>Muatasim Billah | Portfolio</title>
     <meta name="description" content="Portfolio website showcasing work in graphic design, digital marketing, Shopify development, and more.">
-    
+    <script src="preloader.js"></script>
     <!-- Critical CSS for immediate mobile responsive layout -->
     <style>
       * { box-sizing: border-box; }
@@ -58,7 +58,6 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script defer src="search.js"></script>
-    <script src="favicon.js"></script>
 
   </head>
 <body>
@@ -1191,7 +1190,7 @@
               <img src="images/chatbot avatar.png" alt="Muatasim Billah" class="avatar-image">
               <span class="avatar-text" style="display:none;">MB</span>
           </div>
-          <h3>Portfolio Assistant</h3>
+          <h3>MEHAR SHADOW</h3>
       </div>
       <div class="chatbot-controls">
           <button id="theme-toggle" aria-label="Toggle theme">
