updated services images

--- a/tools/index.html
+++ b/tools/index.html
@@ -232,6 +232,15 @@
   <p>Convert PDF documents into editable PowerPoint presentations. Preserves text, images, and layouts with high accuracy.</p>
   <a href="pdf-to-powerpoint.html" class="btn-tool">Use Tool</a>
 </div>
+<!-- Video Trimmer Tool Card -->
+<div class="tool-card glass">
+  <div class="tool-icon">
+    <i class="fas fa-video"></i>
+  </div>
+  <h3>Video Trimmer</h3>
+  <p>Trim and cut videos to extract specific parts without uploading to any server. Select start and end points with precise frame control for perfect clips.</p>
+  <a href="video-trimmer.html" class="btn-tool">Use Tool</a>
+</div>
         <!-- Add more tools here as you create them -->
         
       </div>
