--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
       <!-- Audio Engineering Project -->
       <div class="project-item glass" data-categories="audio">
         <div class="project-image">
-          <img src="images\audio engineering project.png" alt="Audio Engineering">
+          <img src="https://images.unsplash.com/photo-1478737270239-2f02b77fc618?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8YXVkaW98ZW58MHx8MHx8fDA%3D" alt="Audio Engineering">
           <div class="project-overlay">
             <a href="projects/audio-engineering.html" class="project-link view-project-btn">
               <i class="fas fa-eye"></i> View Project <i class="fas fa-volume-up media-icon"></i>
@@ -507,7 +507,7 @@
       <!-- AI Avatar Project -->
       <div class="project-item glass" data-categories="avatars">
         <div class="project-image">
-          <img src="images\ai avatrs engineering project (2).png" alt="AI Avatar">
+          <img src="https://images.unsplash.com/photo-1674027444485-cec3da58eef4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YWl8ZW58MHx8MHx8fDA%3D" alt="AI Avatar">
           <div class="project-overlay">
             <a href="projects/ai-avatar.html" class="project-link view-project-btn">
               <i class="fas fa-eye"></i> View Project <i class="fas fa-video media-icon"></i>
